# sentralert-demo-service

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
src/sentralert_demo_service/: __init__.py  app.py
